<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">loginsql</string>
    <string name="logintxt">Login username and password:</string>
	<string name="inserttxt">New username and password:</string>    
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="insert">Create new</string>
    <string name="welcome">Welcome!</string>
    <string name="title_activity_insert">Insert</string>
    <string name="hello_world">Hello world!</string>

</resources>
